<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/update_schedule">

        <SwitchPreference android:title="@string/schedule_update_checks"
            android:id="@+id/swUCheck"
            android:key="schedule_check"
            android:summaryOn="@string/checking_on"
            android:summaryOff="@string/checking_off"
            android:defaultValue="false" />
		<ListPreference android:title="@string/title_interval"
		    android:id="@+id/swUCheckInt"
		    android:key="schedule_int"
		    android:summary="@string/interval_summary"
		    android:entries="@array/updateFrequency"
		    android:entryValues="@array/updateFrequencyValues"
		    android:defaultValue="1"></ListPreference>
    </PreferenceCategory>

</PreferenceScreen>
